fix: wrap and loading component

--- a/react-ts-template/src/components/Wrap/Wrap.module.css
+++ b/react-ts-template/src/components/Wrap/Wrap.module.css
@@ -1,4 +1,5 @@
 .box {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     gap: 20px; 
